# bishop

./: .gitignore  Makefile  README.md
bishop/: .env  .gitignore  docker-compose.override.yml  docker-compose.yml
bishop/.copier/: .copier-answers.yml
bishop/backend/: .gitignore  Dockerfile  pyproject.toml
bishop/frontend/: .gitignore  .sesskey  package-lock.json  (+1 more)
bishop/llm/: .gitignore  Dockerfile  pyproject.toml
bishop/llm/app/: main.py
bishop/llm/app/broker/: Consumer.py  Producer.py  producer_service.py  sound_producer_service.py
bishop/llm/app/common/: config.py  db.py  logging_service.py
bishop/llm/app/infrastructure/: __init__.py  process_manager.py  redis_manager.py
bishop/llm/app/kaggle_api/: __init__.py  exceptions.py  manager.py  test_kaggle_manager.py
bishop/llm/app/media_converter/: Transcribator.py  __init__.py
bishop/llm/app/ml/: pipeline_manager.py
bishop/llm/app/ml/data/: dataset_utils.py
bishop/llm/app/ml/llm/: inference.py  train.py
bishop/llm/app/ml/modeling/: finetune.py  generate.py  kaggle_finetune.py
bishop/llm/app/s3_storage/: S3Storage.py  __init__.py
bishop/sound/: Dockerfile  pyproject.toml
bishop/sound/app/: main.py
bishop/sound/app/broker/: Consumer.py  Producer.py  producer_service.py
bishop/sound/app/common/: config.py  db.py
bishop/sound/app/ml/: pipeline_manager.py
bishop/sound/app/ml/audio/: inference_dub.py  inference_dub_with_llama.py  train_dub.py
bishop_brains/: Makefile  README.md  pyproject.toml
compile_diploma/: run.sh
misis-thesis/: misis-thesis-presentation.pptx
scripts/: script.py
(+191 files in other folders)
