[project]
name = "sound"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.9.0",
    "coqui-tts>=0.26.1",
    "minio>=7.2.15",
    "pydantic-settings>=2.8.1",
    "pydentic>=0.0.1.dev3",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "transformers>=4.52.1",
    "xcodec2>=0.1.4",
]
